add pokemon sprites

--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -4,6 +4,7 @@
   --gradient-green--light: #aefba8;
   --gradient-green--dark: #24ccaa;
   --green-light: #F1FFEF;
+  --green-mid: #27cdba;
   --green-dark: #1D8696;
   --green-darker: #197380;
   --gutter-width: .625rem; /* 10px */
