--- a/src/components/Raid/index.css
+++ b/src/components/Raid/index.css
@@ -5,6 +5,7 @@
   align-items: center;
   height: var(--current-raid-height-xs);
   transition: box-shadow var(--animation-duration) var(--animation-easing);
+  background-color: #1D869677;
   overflow: hidden;
 
   @media (--tablet-up) {
@@ -12,7 +13,10 @@
   }
 
   &:not(:last-child) {
-    border-bottom: solid 1px rgba(255, 255, 255, .2);
+    /* border-bottom: solid 1px var(--green-mid); */
+    border-bottom: solid 1px transparent;
+    background-clip: content-box;
+    /* margin-bottom: 1px; */
   }
 
   &:hover,
@@ -22,7 +26,7 @@
   }
 
   &:focus {
-    box-shadow: inset 0 0 0 2px rgba(255, 255, 255, .4);
+    background-color: rgba(0, 0, 0, .1);
   }
 }
 
@@ -69,17 +73,14 @@
   position: relative;
   display: block;
   width: var(--current-raid-height-xs);
+  height: var(--current-raid-height-xs);
+  padding: 5px;
+  overflow: hidden;
 
   @media (--tablet-up) {
     width: var(--current-raid-height-md);
+    height: var(--current-raid-height-md);
   }
-}
-
-.raidIcon img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 50%;
-  display: block;
 }
 
 .raidLocation {
